# ifts-pp4-proyecto-integrador

./: .env.template  .gitignore  README.md  main.py  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  seed.py
apps/Usuarios/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/Usuarios/migrations/: 0001_initial.py
apps/Usuarios/templates/: login.html  register.html
apps/barber/: admin.py  apps.py  models.py  urls.py  views.py
apps/barber/migrations/: 0001_initial.py  0002_barber_phone.py
apps/barber/templates/: delete_barber.html  detail_barber.html  formulario_barber.html  index_barber.html
apps/client/: admin.py  form.py  models.py  urls.py  views.py
apps/client/migrations/: 0001_initial.py
apps/client/templates/: client_confirm_delete.html  formulario_client.html  home_cliente.html  list-client.html  success.html  update_client.html
apps/core/: models.py  urls.py  views.py
apps/core/templatetags/: user_tags.py
apps/turn/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/turn/api/: chistes.py
apps/turn/migrations/: 0001_initial.py  0002_turn_is_confirmed_alter_turn_unique_together.py
apps/turn/templates/: Home_turn.html  available_turns_month.html  available_turns_week.html  confirm_turn.html  delete_turn.html  detail_turn.html  formulario_turn.html  home_turn.html
scripts/: seed-admin.py  seed-turn.py  seed.py
static/src/: styles.css
templates/: available_turns.html  base.html  landing.html
turnera/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
