[project]
name = "ifts-pp4-proyecto-integrador"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-widget-tweaks>=1.5.0",
    "python-dotenv>=1.1.0",
    "tzdata>=2025.2",
]
[project.optional-dependencies]
dev = [
    "django-dbml>=0.10.1",
    "django-extensions>=3.2.3",
]

[dependency-groups]
dev = [
    "django-dbml>=0.10.1",
    "django-extensions>=3.2.3",
    "faker>=37.1.0",
]
